fixed spacing between section, titles, and other things

--- a/src/theme/base/_utilities.scss
+++ b/src/theme/base/_utilities.scss
@@ -27,6 +27,14 @@
   }
 }
 
+.u-margin-bottom-xxl {
+  margin-bottom: 14rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 12rem !important;
+  }
+}
+
 
 .u-margin-top-big { margin-top: 8rem !important; }
 .u-margin-top-huge { margin-top: 10rem !important; }
